<resources>

    <string name="init">初始化中...</string>

    <string name="app_name">爱上跑步</string>
    <string name="tittle_name">13周科学跑步计划</string>
    <string name="rest_timeFormat">休息%1$d分钟</string>
    <string name="run_timeFormat">慢跑%1$d分钟</string>
    <string name="title_activity_settings">Settings</string>

    <string name="setting">设置</string>


    <string name="keepScreenOn">跑步中保持屏幕唤醒</string>

    <string name="vibratorOn">震动</string>

    <string name="notifications">提醒（跑步/休息 切换）</string>
    <string name="about">关于与帮助</string>
    <string name="notifications_course">跑步日程提醒</string>

    <string name="musicOn">提示声</string>
    <string name="notifications_start_run">开始跑步提示声</string>
    <string name="notifications_start_rest">开始休息提示声</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="suggest">意见反馈</string>
    <string name="license">开源许可</string>
    <string name="check_upgrade">检查更新</string>

    <string name="run_status_start">开始跑步</string>
    <string name="run_status_running">跑步中</string>
    <string name="run_status_done">完成课程</string>
</resources>
