<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SettingActivity"
    android:theme="@style/SettingTheme"
    android:orientation="vertical">

   <include layout="@layout/common_tool_bar" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp">
        <RelativeLayout
            android:id="@+id/orientation_switch_context"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/setting_selector">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/display_orientation"
                android:gravity="center"
                android:layout_centerVertical="true"
                />
            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:id="@+id/orientation_switch" />
        </RelativeLayout>
        <android.support.v7.widget.AppCompatTextView
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/notifications"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:textColor="@color/setting_head_text"/>
        <RelativeLayout
            android:id="@+id/notifications_coursing_context"
            android:background="@drawable/setting_selector"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            >
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/notifications_coursing"
                android:gravity="center"
                android:layout_centerVertical="true"
               />
            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:id="@+id/notifications_coursing" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dcd3d3"
                android:layout_below="@id/notifications_coursing"
               />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:background="@drawable/setting_selector"
            android:id="@+id/start_run">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/notifications_start_run"
                android:gravity="center"
                android:layout_centerVertical="true"
              />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dcd3d3"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:background="@drawable/setting_selector"
            android:id="@+id/start_rest">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/notifications_start_rest"
                android:gravity="center"
                android:layout_centerVertical="true"
              />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dcd3d3"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>
        <android.support.v7.widget.AppCompatTextView
            android:layout_marginTop="35dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about"
            android:textColor="@color/setting_head_text"/>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/suggest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/suggest"
                    android:gravity="center"
                    android:layout_centerVertical="true" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#dcd3d3"
                    />
            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/license"
                android:gravity="center"
                android:layout_centerVertical="true" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dcd3d3"
                />
            </android.support.v7.widget.LinearLayoutCompat>
            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/check_upgrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/check_upgrade"
                android:gravity="center"
                android:layout_centerVertical="true" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dcd3d3"
                />
            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>
    </ScrollView>
    <View
        android:id="@+id/toolbarShadow"
        style="@style/ToolbarShadow"/>

</android.support.v7.widget.LinearLayoutCompat>
